--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
 </style>
 <script src="content.js" type="text/javascript"></script>
-<script src="node_modules/diff/dist/diff.js" type="text/javascript"></script>
+<script src="diff.js" type="text/javascript"></script>
 <script src="script.js" type="text/javascript"></script>
 </head>
 <body>
