--- a/index.html
+++ b/index.html
@@ -12,7 +12,15 @@
             float: right;
             width: 50%;
         }
+        .author {
+            padding-left: 10px;
+        }
         
+    }
+
+    .author{
+        font-variant: small-caps;
+        font-size: 24px;
     }
 
     form *{
