--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     font-variant: normal;
    }
 
+   .author{
+        margin: 0;
+        margin-top: 5px;
+        font-weight:normal;
+        padding: 0 !important;
+   }
+
     #select-container{
       display: block;  
     }
@@ -66,10 +73,11 @@
     .text-content-active{
         cursor: pointer;
         font-weight: bold;
+        background-color: rgb(170, 236, 170);
     }
 
     .text-content-active:hover{
-        background-color: lightgreen;
+        background-color: rgb(55, 234, 55);
     }
 
     #panel, .panel{
